# refile

./: .env.example  .gitignore  .replit  LICENSE  README.md  deploy-cloudflare.ps1  eslint.config.js  index.html  package-lock.json  package.json  server.js  vite.config.ts  wrangler.toml
.github/workflows/: ci.yml
attached_assets/: Pasted-2026-06-17T01-51-37-598973Z-Cloning-repository-2026-06-_1781661196463.txt
public/: _headers  manifest.json  sw.js
scripts/: dev.mjs
src/: App.css  App.tsx  ConnectionGuide.tsx  Contacts.tsx  DeviceCard.tsx  DocsPage.tsx  DownloadPage.tsx  ErrorBoundary.tsx  FolderCard.tsx  PrivacyModal.tsx  PwaInstallPrompt.tsx  QRCodeModal.tsx  UpdateChecker.tsx  WebApp.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: engine.rs  lib.rs  main.rs  types.rs
src-tauri/src/bluetooth/: mod.rs
src-tauri/src/channel/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/transfer/: mod.rs
src/i18n/: LanguageSwitcher.tsx  en.json  index.ts  zh-TW.json
src/test/: smoke.test.tsx
src/webrtc/: peer.ts  signaling.ts  transfer.ts
