[package]
name = "reflie"
version = "0.1.0"
description = "re/file - P2P File Transfer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "reflie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
mdns-sd = "0.13"
rustls = "0.23"
tokio-rustls = "0.26"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
hex = "0.4"
futures-util = "0.3"
tokio-stream = "0.1"
rcgen = "0.13"
whoami = "1"
